objects/vlocity_cmt__SecurityDeposit__c.object
<CustomObject>
    <description>This object describes the security deposit paid by the customer.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <description>Account Id associated with the security deposit.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Security Deposits</relationshipLabel>
        <relationshipName>SecurityDeposits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DepositAmount__c</fullName>
        <description>The amount of Security Deposit made.</description>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DepositIdentifier__c</fullName>
        <description>Security deposit ID number - auto populate with a sequential number but allow it to be overwritten with ID from external system - if not possible then auto-populate the sequential number and clients will have to add a custom field for the id from the external system</description>
        <externalId>true</externalId>
        <label>Security Deposit Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DepositType__c</fullName>
        <description>Type of deposit made that is not in cash.</description>
        <label>Non-Cash Deposit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>Letter of Guarantee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DiscountAmount__c</fullName>
        <description>Amount the agent provided as a discount on the calculated deposit amount.</description>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DiscountReason__c</fullName>
        <description>Reason for assessing a deposit.</description>
        <label>Discount Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer dispute</fullName>
                </value>
                <value>
                    <fullName>Unable to pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDate__c</fullName>
        <description>Date the Security Deposit is to be or has been returned.</description>
        <label>Deposit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestDate__c</fullName>
        <description>Date the Security Deposit was requested.</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestReason__c</fullName>
        <description>Reason for assessing a discount.</description>
        <label>Request Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor Credit</fullName>
                </value>
                <value>
                    <fullName>Disconnection for Non-Payment</fullName>
                </value>
                <value>
                    <fullName>Unable to Perform Credit Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__WaiverReason__c</fullName>
        <description>Reason for waiving an assessed deposit.</description>
        <label>Waiver Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer dispute</fullName>
                </value>
                <value>
                    <fullName>Customer provided letter of credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Security Deposit</label>
    <nameField>
        <label>Security Deposit Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Deposits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>